--- a/index.html
+++ b/index.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Silvio Sena | WDD 130</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Site</a>
-        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Silvio Sena | WDD 130</h1>
-      <img src="images/profile.jpeg" alt="Hello, my name is Silvio Sena" width="200">
-      <p>Hello! My name is Silvio Sena and I am from Ceara, Brazil. I enjoy outside activities, try new receipts and read.</p>
-    </main>
-    <footer>
-      <p>©️2024 🏖️ Silvio Sena 🏖️ Ceara, Brazil</p>
-    </footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Silvio Sena | WDD 130</title>
+  <style>
+    /* Enhancements */
+    aside {
+      margin: 20px 0; /* Add margin top and bottom */
+      padding: 10px; /* Add padding */
+      border: 1px solid #ddd; /* Add border */
+      background-color: #f5f5f5; /* Add background color */
+    }
+
+    aside h2 {
+      margin-bottom: 10px; /* Add margin bottom */
+    }
+
+    aside img {
+      width: 150px; /* Set width */
+      margin: 0 10px 10px 0; /* Set margin */
+      border: 5px solid #ccc; /* Add border */
+      padding: 5px; /* Add padding */
+      background-color: #eee; /* Add background color */
+      color: #333; /* Set text color */
+    }
+
+    main img {
+      width: 200px; /* Set width */
+      height: auto; /* Set height to auto */
+    }
+
+    p { /* Target all paragraphs */
+      padding: 0; /* Remove padding */
+    }
+
+    footer {
+      margin-top: 20px; /* Add margin top */
+      border-top: 1px solid #ddd; /* Add border top */
+      text-align: center; /* Center text */
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="wwr/">Rafting Site</a>
+      <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Silvio Sena | WDD 130</h1>
+    <img src="images/profile.jpeg" alt="Hello, my name is Silvio Sena">
+    <p>Hello! My name is Silvio Sena and I am from Ceara, Brazil. I enjoy outside activities, try new receipts and read.</p>
+  </main>
+  <aside>
+    <h2>Ceara, Brazil</h2>
+    <img src="images/ceara.jpg" alt="Image of Ceara, Brazil">
+    <p>Ceara is a state located in the Northeastern region of Brazil. It is known for its beautiful beaches and dunes (yep, like the movie).</p>
+  </aside>
+  <footer>
+    <p>©️2024 ️ Silvio Sena ️ Ceara, Brazil</p>
+  </footer>
+</body>
 </html>
