--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   </main>
   <aside>
     <h2>Ceara, Brazil</h2>
-    <img src="images/ceara.jpg" alt="Image of Ceara, Brazil">
-    <p>Ceara is a state located in the Northeastern region of Brazil. It is known for its beautiful beaches and dunes (yep, like the movie).</p>
+    <img src="images/ceara.jpeg" alt="Image of Ceara, Brazil">
+    <p>Ceara is a state located in the Northeastern region of Brazil. It is known for its beautiful beaches and dunes (yep, just like the movie).</p>
   </aside>
   <footer>
     <p>©️2024 ️ Silvio Sena ️ Ceara, Brazil</p>
